# study_cwerg

./: README.md
Cwerg/: CMakeLists.txt
Cwerg/C/: example_fib.c
Cwerg/CpuA64/: opcode_gen.cc
Cwerg/Elf/: elf_tool.cc  gen_elf_test.cc
Cwerg/Examples/: builder_example.cc  fib_ir.h  jit_cpu_a32.cc  jit_cpu_a64.cc  jit_cpu_x64.cc  jit_ir_a32.cc  jit_ir_a64.cc  jit_ir_x64.cc
Cwerg/FrontEndC/: translate.py
Cwerg/FrontEndWASM/TestData/: nv_voronoi.c
Cwerg/Util/: assert.cc  common.c  common.h  stripe.h  webserver.cc
Cwerg/cmake/: openmp.cmake
